fix(nouns-webap): solve overlap issue on noun info row holder

--- a/packages/nouns-webapp/src/components/NounInfoRowHolder/NounInfoRowHolder.module.css
+++ b/packages/nouns-webapp/src/components/NounInfoRowHolder/NounInfoRowHolder.module.css
@@ -32,6 +32,10 @@
   height: 35px;
 }
 
+.noneHolderInforContainer img {
+  display: inline-block;
+}
+
 .nounHolderLoading {
   opacity: 0.5;
 }
